--- a/.config/waybar/themes/catppuccin_mocha.css
+++ b/.config/waybar/themes/catppuccin_mocha.css
@@ -5,9 +5,10 @@
 *
 */
 
-@define-color base   #1e1e2e;
-@define-color mantle #181825;
-@define-color crust  #11111b;
+@define-color base     #1e1e2e;
+@define-color base-tr  rgba(30, 30, 46, 0.2);
+@define-color mantle   #181825;
+@define-color crust    #11111b;
 
 @define-color text     #cdd6f4;
 @define-color subtext0 #a6adc8;
