--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -2,7 +2,7 @@
 * {
   border: none;
   border-radius: 0;
-  font-family: JetBrains Mono Nerd Font;
+  font-family: FiraCode Nerd Font;
   font-weight: 600;
   font-size: 14px;
   margin: 0;
