Update hyprland config to include dunst

--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -54,6 +54,11 @@ label.module {
     animation-direction: alternate;
 }
 
+
+#wireplumber.critical {
+    animation-name: none;
+}
+
 #wireplumber {
     color: @red;
 }
