--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -1,7 +1,7 @@
 @import "theme.css";
 
 * {
-    font-family: 'FiraCodeMono Nerd Font Mono', sans-serif;
+    font-family: 'FiraMono Nerd Font Mono', sans-serif;
     font-size: 14px;
 }
 
@@ -13,7 +13,7 @@ window#waybar {
 
 label.module {
     border: 1px solid @blue;
-    padding: 0px 10px;
+    padding: 0px 5px;
     margin: 4px;
 }
 
@@ -26,6 +26,10 @@ label.module {
     }
 }
 
+#workspaces button {
+    color: @fg;
+}
+
 #workspaces button.visible {
     color: @orange;
 }
@@ -35,16 +39,18 @@ label.module {
 }
 
 #battery,
-#wireplumber.normal,
+#pulseaudio.normal,
 #backlight {
     color: @cyan;
 }
 
-#battery.warning:not(.charging) {
+#battery.warning:not(.charging),
+#pulseaudio.input,
+#idle_inhibitor {
     color: @orange;
 }
 
-#wireplumber.critical,
+#pulseaudio.critical,
 #battery.critical:not(.charging) {
     color: @red;
     animation-name: blink;
@@ -55,11 +61,12 @@ label.module {
 }
 
 
-#wireplumber.critical {
+#pulseaudio.critical {
     animation-name: none;
 }
 
-#wireplumber {
+#pulseaudio,
+#pulseaudio.source-muted {
     color: @red;
 }
 
