Update hyprland config

--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -30,7 +30,19 @@ label.module {
     color: @fg;
 }
 
+#workspaces button.empty {
+    color: @comment;
+}
+
 #workspaces button.visible {
+    color: @yellow;
+}
+
+#workspaces button.visible {
+    color: @yellow;
+}
+
+#workspaces button.active {
     color: @orange;
 }
 
