change theme from everforest to everblush

--- a/waybar/.config/waybar/theme.css
+++ b/waybar/.config/waybar/theme.css
@@ -1,7 +1,7 @@
-@define-color bg #1E2326;
-@define-color blue #7FBBB3;
-@define-color comment #7A8478;
-@define-color cyan #83C092;
-@define-color fg #D3C6AA;
-@define-color orange #E69875;
-@define-color red #E67E80;
+@define-color bg #141b1e;
+@define-color blue #67b0e8;
+@define-color comment #404749;
+@define-color cyan #6cbfbf;
+@define-color fg #dadada;
+@define-color orange #e58774;
+@define-color red #e57474;
