Finish migration to everblush

--- a/waybar/.config/waybar/theme.css
+++ b/waybar/.config/waybar/theme.css
@@ -3,5 +3,5 @@
 @define-color comment #404749;
 @define-color cyan #6cbfbf;
 @define-color fg #dadada;
-@define-color orange #e58774;
+@define-color orange #ff9e66;
 @define-color red #e57474;
