Nothing is better than tokyonight

--- a/waybar/.config/waybar/theme.css
+++ b/waybar/.config/waybar/theme.css
@@ -1,7 +1,7 @@
-@define-color bg #141b1e;
-@define-color blue #67b0e8;
-@define-color comment #404749;
-@define-color cyan #6cbfbf;
-@define-color fg #dadada;
-@define-color orange #ff9e66;
-@define-color red #e57474;
+@define-color bg #16161e;
+@define-color blue #7aa2f7;
+@define-color comment #565f89;
+@define-color cyan #7dcfff;
+@define-color fg #c0caf5;
+@define-color orange #ff9e64;
+@define-color red #f7768e;
